--- a/frontEnd/frontEndPart/src/app/login/login.component.html
+++ b/frontEnd/frontEndPart/src/app/login/login.component.html
@@ -1,1 +1,47 @@
-<p>login works!</p>
+<div class="row">
+    <div style="position: relative;">
+      <img src="https://cdn.icon-icons.com/icons2/742/PNG/512/shopping-cart-3_icon-icons.com_63429.png" alt="logo" class="bg-image">
+    </div>
+    <div style="position: absolute;" class="col-md-4 offset-md-4 col-sm-6 offset-sm-3">
+      <div class="card login">
+        <div class="card-body login-card">
+          <div class="login-avatar">
+            <img src="https://pluspng.com/img-png/user-png-icon-account-avatar-human-male-man-men-people-person-download-svg-download-png-edit-icon-512.png" alt="user" class="user-image">
+          </div>
+          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="text" formControlName="email" class="form-control" 
+                [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
+              <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                  <div *ngIf="f['email'].errors['required']">Email is required</div>
+                  <div *ngIf="f['email'].errors['email']">Email must be a valid email address</div>
+              </div>
+            </div>
+          
+            <div class="form-group">
+              <label for="password">Password : </label>
+              <input type="password" formControlName="password" class="form-control"
+                     [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
+              <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                  <div *ngIf="f['password'].errors['required']">Password is required</div>
+                  <div *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters</div>
+              </div>
+
+              <div class="text-right forget-pass">
+                <a routerLink="/forget-password">Forget Password ?</a>
+              </div>
+            </div>
+            <div class="text-center">
+              <input type="submit" class="btn btn-color" value="Login">
+            </div>
+          </form>
+          <div class="text-center sign-up-text">
+            Don`t have an account ? <a routerLink="/sign-up">Sign Up</a> here.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
