--- a/frontEnd/frontEndPart/src/app/sign-up/sign-up.component.html
+++ b/frontEnd/frontEndPart/src/app/sign-up/sign-up.component.html
@@ -26,11 +26,22 @@
                 </div>
               </div>
               <div class="form-group">
+                <input type="text" formControlName="username" class="form-control" 
+                  placeholder="Username"
+                  [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
+                <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
+                    <div *ngIf="f['username'].errors['required']">Username is required</div>
+                    <div *ngIf="f['username'].errors['minlength']">Password must be at least 10 characters</div>
+                    <div *ngIf="f['username'].errors['pattern']">Username must be valid, only '_' special character allowed</div>
+                </div>
+              </div>
+              <div class="form-group">
                 <input type="text" formControlName="phone" class="form-control"
                 placeholder="Mobile Number" 
                 [ngClass]="{ 'is-invalid': submitted && f['phone'].errors }" />
                 <div *ngIf="submitted && f['phone'].errors" class="invalid-feedback">
-                    <div *ngIf="f['phone'].errors['required']">phone number is required</div>
+                    <div *ngIf="f['phone'].errors['required']">Phone number is required</div>
+                    <div *ngIf="f['phone'].errors['pattern']">Phone number must be valid</div>
                 </div>
               </div>
               <div class="form-group">
@@ -44,22 +55,27 @@
               </div>
               <div class="form-group">
                 <input type="password" formControlName="password" class="form-control"
-                  placeholder="********"
+                  placeholder="Password"
                   [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
                 <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
                     <div *ngIf="f['password'].errors['required']">Password is required</div>
-                    <div *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters</div>
+                    <div *ngIf="f['password'].errors['minlength']">Password must be at least 8 characters</div>
+                    <div *ngIf="f['password'].errors['pattern']">
+                      Password must have upper and lower case combination,
+                      should have atleast 1 number, 1 special characters (#,?,!,@,$,%,^,&,*,_).
+                    </div>
                 </div>
               </div>
               <div class="form-group">
                 <input type="password" formControlName="c_password" class="form-control"
-                  placeholder="********"
+                  placeholder="Confirm Password" 
                   [ngClass]="{ 'is-invalid': submitted && f['c_password'].errors }" />
                 <div *ngIf="submitted && f['c_password'].errors" class="invalid-feedback">
                     <div *ngIf="f['c_password'].errors['required']">Confirm Password is required</div>
-                    <div *ngIf="f['c_password'].errors['minlength']">Password must be at least 6 characters</div>
+                    <div *ngIf="f['c_password'].errors['minlength']">Password must be at least 8 characters</div>
                 </div>
               </div>
+              <div *ngIf="pass">hiii</div>
                             
               <div class="text-center">
                 <input type="submit" class="btn btn-color" value="Sign Up">
