--- a/frontEnd/frontEndPart/src/app/app.component.html
+++ b/frontEnd/frontEndPart/src/app/app.component.html
@@ -1,8 +1,4 @@
-<div class="container-fluid">
-    <br />
-    <!-- <a [routerLink]="['/login']" class="btn btn-primary">Login</a> &nbsp;
-    <a [routerLink]="['/sign-up']" class="btn btn-primary">Sign Up</a> -->
-    <br />
+<div>
     <router-outlet></router-outlet>
 </div>
   
